# xtb-dividend-analysis

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  coverage.json  logging_config.py  main.py  poetry-instruction.md  pyproject.toml  requirements-test.txt  requirements.txt  tox.ini
.github/: copilot-instructions.md  renovate.json
.github/workflows/: ci.yml  fast-tests.yml
assets/: for_google_spreadsheet.csv  poetry-instruction.md  terminal.txt
config/: __init__.py  logging_config.py  settings.py
data/: archiwum_tab_a_2025.csv  demo_XTB_broker_statement.xlsx  demo_XTB_broker_statement_currency_PLN.xlsx
data_acquisition/: __init__.py  playwright_download_currency_archive.py
data_processing/: __init__.py  column_formatter.py  column_normalizer.py  constants.py  currency_converter.py  data_aggregator.py  dataframe_processor.py  date_converter.py  dividend_filter.py  exporter.py  extractor.py  file_paths.py  import_data_xlsx.py  protocols.py  tax_calculator.py  tax_extractor.py
docs/: AUTOMATED_TESTING_SUMMARY.md  CI_CD_FIXES.md  PROJECT_REORGANIZATION_SUMMARY.md  PROJECT_STRUCTURE.md  REQUIREMENTS.md  TESTING.md  act-local-testing.md  brew-update-guide.md  code-cli-setup.md  poetry-instruction.md  quality-assurance.md  technical-stack.md  testing-guide.md
scripts/: SCRIPTS_GUIDE.md  bandit_to_sarif.py  pre-commit-hook-example.sh  run_tests.ps1  run_tests.py  security_summary.py
tests/: README.md  __init__.py  conftest.py  test_dataframe_processor.py  test_date_converter.py  test_exporter.py  test_main.py  test_tax_calculator.py
tests/contract/: __init__.py  conftest.py  schemas.py  test_input_xlsx_schema.py  test_output_csv_schema.py
tests/fuzz/: README.md  __init__.py  conftest.py  test_parsers_fuzz.py  test_xlsx_loader_fuzz.py
tests/metamorphic/: __init__.py  conftest.py  test_aggregate_metamorphic.py  test_currency_metamorphic.py  test_tax_metamorphic.py
tests/performance/: __init__.py  conftest.py  test_currency_converter_performance.py  test_dataframe_processor_performance.py  test_dividend_filter_performance.py  test_memory_performance.py  test_performance.py  test_scalability_performance.py  test_tax_calculator_performance.py  test_tax_extractor_performance.py
tests/property_based/: __init__.py  test_property_based.py  test_property_based_advanced.py
tests/test_integration/: __init__.py  conftest.py  test_currency_conversion_integration.py  test_data_import_processing.py  test_data_pipeline.py  test_error_handling_integration.py  test_export_functionality.py  test_tax_calculation_integration.py
tests/test_integration/fixtures/: __init__.py
tests/test_security/: README.md  __init__.py  conftest.py  test_bandit_to_sarif.py  test_security_summary.py
tests/test_unit/: test_column_formatter.py  test_column_normalizer.py  test_currency_converter.py  test_data_aggregator.py  test_dataframe_processor.py  test_date_converter.py  test_dividend_filter.py  test_exporter.py  test_extractor.py  test_file_paths.py  test_import_data_xlsx.py  test_logging_config.py  test_main.py  test_playwright_download_currency_archive.py  test_settings.py  test_tax_calculator.py  test_tax_extractor.py
visualization/: __init__.py  chart_net_dividend.py  plot_style.py  ticker_colors.py
