[project]
name = "xtb-dividend-analysis"
version = "0.1.0"
description = "Processes XTB broker financial data, applies transformations, and exports results to a Google Sheets-compatible CSV."
authors = []
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.0",
    "numpy>=2.3.0",
    "matplotlib>=3.10.0",
    "openpyxl>=3.1.5",
    "playwright>=1.56.0",
    "tabulate>=0.9.0",
    "loguru>=0.7.0",
    "pydantic-settings>=2.0.0"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-timeout = "^2.3.0"
hypothesis = "^6.0.0"
ruff = "^0.9.0"
mypy = "^1.0.0"
types-tabulate = "^0.9.0"
safety = "^3.0.0"
bandit = "^1.7.0"
tox = "^4.0.0"
pre-commit = "^4.5.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = [
    "-v",
    "--tb=short",
    "--cov=data_processing",
    "--cov=data_acquisition",
    "--cov=config",
    "--cov=scripts",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--strict-markers"
]
filterwarnings = [
    # Escalate deprecations only from our own source modules so we never
    # silently ship deprecated APIs. Third-party libraries have their own
    # release cycles and are excluded from strict enforcement.
    "error::DeprecationWarning:data_processing",
    "error::DeprecationWarning:config",
    "error::DeprecationWarning:scripts",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "unit: Unit tests for individual functions",
    "integration: Integration tests for multiple components",
    "security: Security and CI/CD script tests",
    "performance: Performance and stress tests",
    "edge_case: Edge case and boundary tests",
    "property_based: Property-based tests using Hypothesis",
    "slow: Slow tests (excluded from fast-feedback runs with -m 'not slow')"
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.coverage.run]
branch = true
source = ["data_processing", "data_acquisition", "config"]
omit = [
    "tests/*",
    "visualization/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "venv/*",
    ".tox/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]
