[project]
name = "xtb-dividend-analysis"
version = "0.1.0"
description = "Processes XTB broker financial data, applies transformations, and exports results to a Google Sheets-compatible CSV."
authors = []
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pandas>=3.0.1",
    "numpy>=2.4.3",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "playwright>=1.58.0",
    "tabulate>=0.10.0",
    "loguru (>=0.7.3)",
    "pydantic-settings>=2.13.1"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-timeout = "^2.4.0"
hypothesis = "^6.151.9"
ruff = "^0.15.5"
mypy = "^1.19.1"
types-tabulate = "^0.10.0.20260308"
safety = "^3.7.0"
bandit = "^1.9.4"
tox = "^4.49.1"
pre-commit = "^4.5.1"
mutmut = "^3.5.0"
pytest-randomly = ">=3.15"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = [
    "-v",
    "--tb=short",
    "--cov=data_processing",
    "--cov=data_acquisition",
    "--cov=config",
    "--cov=scripts",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--strict-markers"
]
asyncio_mode = "strict"
filterwarnings = [
    # Escalate deprecations only from our own source modules so we never
    # silently ship deprecated APIs. Third-party libraries have their own
    # release cycles and are excluded from strict enforcement.
    "error::DeprecationWarning:data_processing",
    "error::DeprecationWarning:config",
    "error::DeprecationWarning:scripts",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "unit: Unit tests for individual functions",
    "integration: Integration tests for multiple components",
    "security: Security and CI/CD script tests",
    "performance: Performance and stress tests",
    "edge_case: Edge case and boundary tests",
    "property_based: Property-based tests using Hypothesis",
    "slow: Slow tests (excluded from fast-feedback runs with -m 'not slow')"
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mutmut]
paths_to_mutate = ["data_processing/"]
tests_dir = ["tests/test_unit/"]
also_copy = ["config/", "data_acquisition/", "visualization/", "main.py"]
do_not_mutate = [
    "data_processing/import_data_xlsx.py",
    "data_processing/data_aggregator.py",
    "data_processing/constants.py",
    "data_processing/file_paths.py",
]
pytest_add_cli_args = ["-o", "addopts=--strict-markers", "-x", "--no-header", "-q", "--no-cov", "--tb=no", "-m", "not property_based and not slow"]

[tool.coverage.run]
branch = true
source = ["data_processing", "data_acquisition", "config"]
omit = [
    "tests/*",
    "visualization/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "venv/*",
    ".tox/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]
