[project]
name = "xtb-dividend-analysis"
version = "0.1.0"
description = "Processes XTB broker financial data, applies transformations, and exports results to a Google Sheets-compatible CSV."
authors = []
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pandas (>=3.0.2)",
    "numpy (>=2.4.4)",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "playwright>=1.58.0",
    "tabulate>=0.10.0",
    "loguru (>=0.7.3)",
    "pydantic-settings>=2.13.1"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-cov = "^7.1.0"
pytest-timeout = "^2.4.0"
hypothesis = "^6.151.14"
ruff = "^0.15.10"
mypy = "^1.20.1"
types-tabulate = "^0.10.0.20260408"
safety = "^3.7.0"
bandit = "^1.9.4"
tox = "^4.52.1"
pre-commit = "^4.5.1"
mutmut = "^3.5.0"
pytest-randomly = ">=4.0.1"
pandera = "^0.31.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = [
    "-v",
    "--tb=short",
    "--cov=data_processing",
    "--cov=data_acquisition",
    "--cov=config",
    "--cov=scripts",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--strict-markers"
]
filterwarnings = [
    # Escalate deprecations only from our own source modules so we never
    # silently ship deprecated APIs. Third-party libraries have their own
    # release cycles and are excluded from strict enforcement.
    "error::DeprecationWarning:data_processing",
    "error::DeprecationWarning:config",
    "error::DeprecationWarning:scripts",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "unit: Unit tests for individual functions",
    "integration: Integration tests for multiple components",
    "security: Security and CI/CD script tests",
    "performance: Performance and stress tests",
    "edge_case: Edge case and boundary tests",
    "property_based: Property-based tests using Hypothesis",
    "slow: Slow tests (excluded from fast-feedback runs with -m 'not slow')",
    "contract: Schema/contract tests for input XLSX and output CSV",
    "fuzz: Fuzz tests for parser robustness (Hypothesis binary/text strategies)",
    "metamorphic: Metamorphic relation tests for tax/currency/aggregate logic"
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mutmut]
paths_to_mutate = ["data_processing/"]
tests_dir = ["tests/test_unit/"]
also_copy = ["config/", "data_acquisition/", "visualization/", "main.py"]
do_not_mutate = [
    "data_processing/import_data_xlsx.py",
    "data_processing/constants.py",
]
# Skipped mutations configuration
# These mutations in create_exchange_rate_d_minus_1_column are nonsensical:
# - Default value changes don't affect behavior (wrapped in str() or error-only)
# - String literal changes don't affect logic (error messages only)
# - AND→OR change doesn't affect observable behavior (NaN comparisons return False)
# Format: column_formatter.py.xǁColumnFormatterǁcreate_exchange_rate_d_minus_1_column__mutmut_ID
skip_mutations = [
    # create_exchange_rate_d_minus_1_column nonsensical mutations
    "data_processing.column_formatter.xǁColumnFormatterǁcreate_exchange_rate_d_minus_1_column__mutmut_7",
    "data_processing.column_formatter.xǁColumnFormatterǁcreate_exchange_rate_d_minus_1_column__mutmut_11",
    "data_processing.column_formatter.xǁColumnFormatterǁcreate_exchange_rate_d_minus_1_column__mutmut_20",
    "data_processing.column_formatter.xǁColumnFormatterǁcreate_exchange_rate_d_minus_1_column__mutmut_22",
    "data_processing.column_formatter.xǁColumnFormatterǁcreate_exchange_rate_d_minus_1_column__mutmut_26",
    "data_processing.column_formatter.xǁColumnFormatterǁcreate_exchange_rate_d_minus_1_column__mutmut_34",
    "data_processing.column_formatter.xǁColumnFormatterǁcreate_exchange_rate_d_minus_1_column__mutmut_36",
    "data_processing.column_formatter.xǁColumnFormatterǁcreate_exchange_rate_d_minus_1_column__mutmut_37",
    "data_processing.column_formatter.xǁColumnFormatterǁcreate_exchange_rate_d_minus_1_column__mutmut_38",
    "data_processing.column_formatter.xǁColumnFormatterǁcreate_exchange_rate_d_minus_1_column__mutmut_39",
    "data_processing.column_formatter.xǁColumnFormatterǁcreate_exchange_rate_d_minus_1_column__mutmut_43",
    "data_processing.column_formatter.xǁColumnFormatterǁcreate_exchange_rate_d_minus_1_column__mutmut_45",
    "data_processing.column_formatter.xǁColumnFormatterǁcreate_exchange_rate_d_minus_1_column__mutmut_46",
    "data_processing.column_formatter.xǁColumnFormatterǁcreate_exchange_rate_d_minus_1_column__mutmut_47",
    "data_processing.column_formatter.xǁColumnFormatterǁcreate_exchange_rate_d_minus_1_column__mutmut_48",
    "data_processing.column_formatter.xǁColumnFormatterǁcreate_exchange_rate_d_minus_1_column__mutmut_97",
    # add_tax_collected_amount nonsensical mutations
    # statement_currency default changed (still != "USD")
    "data_processing.column_formatter.xǁColumnFormatterǁadd_tax_collected_amount__mutmut_1",
    "data_processing.column_formatter.xǁColumnFormatterǁadd_tax_collected_amount__mutmut_2",
    # Fallback defaults for always-present columns
    "data_processing.column_formatter.xǁColumnFormatterǁadd_tax_collected_amount__mutmut_6",
    "data_processing.column_formatter.xǁColumnFormatterǁadd_tax_collected_amount__mutmut_8",
    "data_processing.column_formatter.xǁColumnFormatterǁadd_tax_collected_amount__mutmut_12",
    "data_processing.column_formatter.xǁColumnFormatterǁadd_tax_collected_amount__mutmut_15",
    "data_processing.column_formatter.xǁColumnFormatterǁadd_tax_collected_amount__mutmut_17",
    "data_processing.column_formatter.xǁColumnFormatterǁadd_tax_collected_amount__mutmut_68",
    # Error-context-only arguments (ticker, date, parser label)
    "data_processing.column_formatter.xǁColumnFormatterǁadd_tax_collected_amount__mutmut_22",
    "data_processing.column_formatter.xǁColumnFormatterǁadd_tax_collected_amount__mutmut_23",
    "data_processing.column_formatter.xǁColumnFormatterǁadd_tax_collected_amount__mutmut_24",
    "data_processing.column_formatter.xǁColumnFormatterǁadd_tax_collected_amount__mutmut_25",
    "data_processing.column_formatter.xǁColumnFormatterǁadd_tax_collected_amount__mutmut_26",
    "data_processing.column_formatter.xǁColumnFormatterǁadd_tax_collected_amount__mutmut_27",
    "data_processing.column_formatter.xǁColumnFormatterǁadd_tax_collected_amount__mutmut_28",
    "data_processing.column_formatter.xǁColumnFormatterǁadd_tax_collected_amount__mutmut_29",
    "data_processing.column_formatter.xǁColumnFormatterǁadd_tax_collected_amount__mutmut_30",
    "data_processing.column_formatter.xǁColumnFormatterǁadd_tax_collected_amount__mutmut_31",
    "data_processing.column_formatter.xǁColumnFormatterǁadd_tax_collected_amount__mutmut_32",
    "data_processing.column_formatter.xǁColumnFormatterǁadd_tax_collected_amount__mutmut_33",
    "data_processing.column_formatter.xǁColumnFormatterǁadd_tax_collected_amount__mutmut_34",
    "data_processing.column_formatter.xǁColumnFormatterǁadd_tax_collected_amount__mutmut_35",
    "data_processing.column_formatter.xǁColumnFormatterǁadd_tax_collected_amount__mutmut_36",
    "data_processing.column_formatter.xǁColumnFormatterǁadd_tax_collected_amount__mutmut_37",
    "data_processing.column_formatter.xǁColumnFormatterǁadd_tax_collected_amount__mutmut_38",
    "data_processing.column_formatter.xǁColumnFormatterǁadd_tax_collected_amount__mutmut_41",
    "data_processing.column_formatter.xǁColumnFormatterǁadd_tax_collected_amount__mutmut_42",
    "data_processing.column_formatter.xǁColumnFormatterǁadd_tax_collected_amount__mutmut_43",
    "data_processing.column_formatter.xǁColumnFormatterǁadd_tax_collected_amount__mutmut_48",
    "data_processing.column_formatter.xǁColumnFormatterǁadd_tax_collected_amount__mutmut_49",
    "data_processing.column_formatter.xǁColumnFormatterǁadd_tax_collected_amount__mutmut_50",
    # Log message content
    "data_processing.column_formatter.xǁColumnFormatterǁadd_tax_collected_amount__mutmut_98",
    # normalize_column_names log message
    "data_processing.column_normalizer.xǁColumnNormalizerǁnormalize_column_names__mutmut_55",
    # calculate_tax_for_pln_statement / calculate_tax_for_usd_statement
    # Guard block (lines 251-252, 295-296) is dead code: apply() on the very next
    # line unconditionally overwrites "Tax Amount PLN", so any mutation inside the
    # guard produces identical observable behaviour.
    # Logger mutations (mutmut_39, mutmut_40) affect only the log message, not the
    # returned DataFrame.
    "data_processing.tax_calculator.xǁTaxCalculatorǁcalculate_tax_for_pln_statement__mutmut_15",
    "data_processing.tax_calculator.xǁTaxCalculatorǁcalculate_tax_for_pln_statement__mutmut_16",
    "data_processing.tax_calculator.xǁTaxCalculatorǁcalculate_tax_for_pln_statement__mutmut_17",
    "data_processing.tax_calculator.xǁTaxCalculatorǁcalculate_tax_for_pln_statement__mutmut_18",
    "data_processing.tax_calculator.xǁTaxCalculatorǁcalculate_tax_for_pln_statement__mutmut_19",
    "data_processing.tax_calculator.xǁTaxCalculatorǁcalculate_tax_for_pln_statement__mutmut_20",
    "data_processing.tax_calculator.xǁTaxCalculatorǁcalculate_tax_for_pln_statement__mutmut_21",
    "data_processing.tax_calculator.xǁTaxCalculatorǁcalculate_tax_for_pln_statement__mutmut_22",
    "data_processing.tax_calculator.xǁTaxCalculatorǁcalculate_tax_for_pln_statement__mutmut_23",
    "data_processing.tax_calculator.xǁTaxCalculatorǁcalculate_tax_for_pln_statement__mutmut_39",
    "data_processing.tax_calculator.xǁTaxCalculatorǁcalculate_tax_for_usd_statement__mutmut_15",
    "data_processing.tax_calculator.xǁTaxCalculatorǁcalculate_tax_for_usd_statement__mutmut_16",
    "data_processing.tax_calculator.xǁTaxCalculatorǁcalculate_tax_for_usd_statement__mutmut_17",
    "data_processing.tax_calculator.xǁTaxCalculatorǁcalculate_tax_for_usd_statement__mutmut_18",
    "data_processing.tax_calculator.xǁTaxCalculatorǁcalculate_tax_for_usd_statement__mutmut_19",
    "data_processing.tax_calculator.xǁTaxCalculatorǁcalculate_tax_for_usd_statement__mutmut_20",
    "data_processing.tax_calculator.xǁTaxCalculatorǁcalculate_tax_for_usd_statement__mutmut_21",
    "data_processing.tax_calculator.xǁTaxCalculatorǁcalculate_tax_for_usd_statement__mutmut_22",
    "data_processing.tax_calculator.xǁTaxCalculatorǁcalculate_tax_for_usd_statement__mutmut_23",
    "data_processing.tax_calculator.xǁTaxCalculatorǁcalculate_tax_for_usd_statement__mutmut_40",
    # _parse_exchange_rate / _parse_tax_collected_amount / _calculate_tax_pln_row
    # Error message string mutations and error context defaults
    # These mutations change error message text and ticker/date defaults used only
    # in error messages. Error message cosmetics don't affect code behavior.
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_parse_exchange_rate__mutmut_18",
    # _calculate_tax_pln_row defensive default values for .get() calls
    # These are never exercised in practice (all test data includes required columns).
    # Mutations to default "" / None are dead code for always-present columns.
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_4",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_6",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_10",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_14",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_18",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_21",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_23",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_27",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_28",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_31",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_33",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_37",
    # _calculate_tax_pln_row error message cosmetics and context defaults
    # Mutations to error message strings and ticker/date defaults used only in
    # exception messages. These don't affect code behavior, only message cosmetics.
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_39",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_40",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_41",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_42",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_43",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_44",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_45",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_46",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_47",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_48",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_49",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_50",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_51",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_52",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_53",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_54",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_55",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_56",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_57",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_58",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_59",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_60",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_61",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_64",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_65",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_66",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_67",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_68",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_69",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_70",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_71",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_72",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_73",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_74",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_75",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_76",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_77",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_78",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_79",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_80",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_81",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_82",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_83",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_84",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_85",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_87",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_88",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_89",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_90",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_91",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_92",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_93",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_94",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_95",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_96",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_97",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_98",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_99",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_100",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_101",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_102",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_103",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_104",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_105",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_106",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_107",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_108",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_109",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_110",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_111",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_114",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_115",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_116",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_121",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_122",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_123",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_125",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_126",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_127",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_132",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_133",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_134",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_144",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_145",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_147",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_150",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_151",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_152",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_153",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_155",
    "data_processing.tax_calculator.xǁTaxCalculatorǁ_calculate_tax_pln_row__mutmut_156",
]
pytest_add_cli_args = ["-o", "addopts=--strict-markers", "-x", "--no-header", "-q", "--no-cov", "--tb=no", "-m", "not property_based and not slow", "-p", "no:randomly"]

[tool.coverage.run]
branch = true
source = ["data_processing", "data_acquisition", "config"]
omit = [
    "tests/*",
    "visualization/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "venv/*",
    ".tox/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]
